syntax = "proto3";

package calculator;

option java_package = "br.com.proto.calculator";
option java_multiple_files = true;

message AvgRequest {
  int64 number = 1;
}

message AvgResponse {
  double avg = 1;
}
