syntax = "proto3";

package calculator;

option java_package = "br.com.proto.calculator";
option java_multiple_files = true;

message PrimeRequest {
  int64 number = 1;
}

message PrimeResponse {
  int64 prime_factor = 1;
}
