syntax = "proto3";

package calculator;

option java_package = "br.com.proto.calculator";
option java_multiple_files = true;

message SqrtRequest {
  int64 number = 1;
}

message SqrtResponse {
  double sqrt = 1;
}
